--- a/src/homePage.html
+++ b/src/homePage.html
@@ -51,7 +51,7 @@
     <!---------------------------------------------------------------------------------------------------------------->
     <!-- SideBar -->
     <div id="sidebarBlock" class="sidebar">
-      <a id="closeSidebarBtn">
+      <a id="sidebarCloseBtn">
         <i class="bi bi-x-circle"></i>
       </a>
       <a href="https://discord.com/app" target="_blank">
@@ -64,10 +64,13 @@
         <i class="bi bi-whatsapp"></i>
       </a>
       <a href="" target="_blank">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" fill="#818181">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" fill="#818181" height="24" width="24">
           <path d="M339 314.9L175.4 32h161.2l163.6 282.9H339zm-137.5 23.6L120.9 480h310.5L512 
             338.5H201.5zM154.1 67.4L0 338.5 80.6 480 237 208.8 154.1 67.4z"/>
         </svg>
+      </a>
+      <a href="#">
+        <i class="bi bi-plus-lg"></i>
       </a>
       <a href="#" style="margin-top: auto;">
         <i class="bi bi-gear" id="settingsBtn"></i>
