--- a/src/homePage.html
+++ b/src/homePage.html
@@ -7,74 +7,100 @@
     <link rel="stylesheet" href="homePage.css" />
     <link rel="stylesheet" href="./settingsModal/settingsModal.css" />
     <link rel="stylesheet" href="./sidebar/sidebar.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fredoka&family=Poppins&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Fredoka&family=Poppins&display=swap" rel="stylesheet"> -->
 
     <!-- Icons -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
+    />
     <title>new tab</title>
   </head>
   <body>
     <div class="bg">
-      
       <div class="top-left">
-        <!-- <i class="bi bi-grid-3x3-gap-fill"></i> -->
-        <!-- <a href="https://www.google.co.in/intl/en/about/products?tab=rh" target="_blank" id="apps"> -->
-          <i class="bi bi-grid" id="sidebarOpenbtn"></i>
-        <!-- </a> -->
-        <!-- <button class="openbtn" id="sidebarBtn">☰ Open Sidebar</button>  -->
+        <i class="bi bi-grid" id="sidebarOpenbtn"></i>
       </div>
 
-      <div class ="text-right top-right weather">
+      <div class="text-right top-right weather">
         <div id="weather">
           <i class="bi bi-brightness-high"></i>
           <span>24 °C</span>
-        </div>	
+        </div>
         <div id="location">Kolkata</div>
       </div>
-      <div class ="text-center centered">
+
+      <div class="text-center centered">
         <div id="time-div">
           <h1 id="time"></h1>
           <!-- <h2 id="ampm">AM</h2> -->
         </div>
-        <h3 id="greetings">Good Afternoon</h3>
+        <!-- Greetings -->
+        <h3 id="greetings"></h3>
       </div>
-      <div class ="text-center bottom-third quote">
+
+      <div class="text-center bottom-third quote">
         <div id="quote-text">"pee pee poo poo" - cum</div>
       </div>
-    </div>
     </div>
 
     <!---------------------------------------------------------------------------------------------------------------->
     <!---------------------------------------------------------------------------------------------------------------->
     <!---------------------------------------------------------------------------------------------------------------->
     <!-- SideBar -->
-    <div id="sidebarBlock" class="sidebar">
-      <a id="sidebarCloseBtn">
-        <i class="bi bi-x-circle"></i>
-      </a>
-      <a href="https://discord.com/app" target="_blank">
-        <i class="bi bi-discord"></i>
-      </a>
-      <a href="https://youtube.com" target="_blank">
-        <i class="bi bi-youtube"></i>
-      </a>
-      <a href="https://web.whatsapp.com/" target="_blank">
-        <i class="bi bi-whatsapp"></i>
-      </a>
-      <a href="" target="_blank">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" fill="#818181" height="24" width="24">
-          <path d="M339 314.9L175.4 32h161.2l163.6 282.9H339zm-137.5 23.6L120.9 480h310.5L512 
-            338.5H201.5zM154.1 67.4L0 338.5 80.6 480 237 208.8 154.1 67.4z"/>
+    <div class="sidebar">
+      <a href="chrome://apps/" class="local">
+        <svg id="defaultLinks" viewBox="0 0 20 20" width="16" height="16">
+          <path
+            d="M6,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,
+            -2 -2,0.9 -2,2 0.9,2 2,2zM6,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,14c1.1,0 2,-0.9 2,
+            -2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM16,
+            6c0,1.1 0.9,2 2,2s2,-0.9 2,-2 -0.9,-2 -2,-2 -2,0.9 -2,2zM12,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,
+            2 0.9,2 2,2zM18,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM18,20c1.1,0 2,-0.9 2,-2s-0.9,
+            -2 -2,-2 -2,0.9 -2,2 0.9,2 2,2z"
+          ></path>
         </svg>
+        <span>&nbsp;Apps</span>
       </a>
-      <a href="#">
-        <i class="bi bi-plus-lg"></i>
+      <a href="https://youtube.com">
+        <img
+          class="favicon"
+          src="https://t0.gstatic.com/faviconV2?client=SOCIAL&type=FAVICON&fallback_opts=TYPE,SIZE,URL&url=https://www.youtube.com&size=16"
+          alt=""
+        />
+        <span>&nbsp;Youtube</span>
       </a>
-      <a href="#" style="margin-top: auto;">
-        <i class="bi bi-gear" id="settingsBtn"></i>
+      <!-- <a href="https://www.youtube.com">
+        <img src="https://t0.gstatic.com/faviconV2?client=SOCIAL&type=FAVICON&fallback_opts=TYPE,SIZE,URL&url=https://www.youtube.com&size=24" alt="">
+      </a> -->
+
+      <div id="addLinkIconButton">
+        <i class="bi bi-plus-circle"></i>
+        <span>&nbsp;Add link</span>
+      </div>
+      <a href="chrome://apps">
+        <span>&nbsp;Apps</span>
       </a>
+    </div>
+    <!---------------------------------------------------------------------------------------------------------------->
+    <!---------------------------------------------------------------------------------------------------------------->
+    <!---------------------------------------------------------------------------------------------------------------->
+    <!-- AddLink -->
+    <div class="addLinkModal">
+      <br /><br />
+      <p>Title</p>
+      <input class="linkInput" type="text" id="title" name="title" />
+      <br />
+      <p>Link</p>
+      <input class="linkInput" type="text" id="link" name="link" />
+      <br />
+      <div class="buttonGroup">
+        <button id="cancelLink">Cancel</button>
+        <button id="saveLink">Save</button>
+      </div>
+      <br /><br />
     </div>
 
     <!---------------------------------------------------------------------------------------------------------------->
@@ -88,54 +114,34 @@
       <div class="modal-content">
         <div class="modal-header">
           <span class="close">&times;</span>
-          <h4>Modal Header</h4>
+          <h4>Settings</h4>
         </div>
-        <div class="modal-body">
-          <p>Some text in the Modal Body</p>
-          <p>Some other text...</p>
+        <div class="eachModalContent">
+          <span>Select your font:&nbsp;&nbsp;&nbsp;</span>
+          <select name="fontSelect" id="fontSelect">
+            <option value="Poppins">Poppins</option>
+            <option value="Fredoka">Fredoka</option>
+          </select>
         </div>
-        <div class="modal-body">
-          <p>Some text in the Modal Body</p>
-          <p>Some other text...</p>
+        <div class="eachModalContent">
+          <span>Time format:&nbsp;&nbsp;&nbsp;</span>
+          <select name="fontSelect" id="fontSelect">
+            <option value="12">12</option>
+            <option value="24">24</option>
+          </select>
         </div>
-        <div class="modal-body">
-          <p>Some text in the Modal Body</p>
-          <p>Some other text...</p>
-        </div>
-        <div class="modal-body">
-          <p>Some text in the Modal Body</p>
-          <p>Some other text...</p>
-        </div>
-        <div class="modal-body">
-          <p>Some text in the Modal Body</p>
-          <p>Some other text...</p>
-        </div>
-        <div class="modal-body">
-          <p>Some text in the Modal Body</p>
-          <p>Some other text...</p>
-        </div>
-        <div class="modal-body">
-          <p>Some text in the Modal Body</p>
-          <p>Some other text...</p>
-        </div>
-        <div class="modal-body">
-          <p>Some text in the Modal Body</p>
-          <p>Some other text...</p>
-        </div>
-        <div class="modal-body">
-          <p>Some text in the Modal Body</p>
-          <p>Some other text...</p>
-        </div>
-        <div class="modal-body">
-          <p>Some text in the Modal Body</p>
-          <p>Some other text...</p>
+        <div class="eachModalContent">
+          <span>Select your font:&nbsp;&nbsp;&nbsp;</span>
+          <select name="fontSelect" id="fontSelect">
+            <option value="Poppins">Poppins</option>
+            <option value="Fredoka">Fredoka</option>
+          </select>
         </div>
         <div class="modal-footer">
           <h4>Modal Footer</h4>
         </div>
       </div>
     </div>
-    
 
     <!---------------------------------------------------------------------------------------------------------------->
     <!---------------------------------------------------------------------------------------------------------------->
