settings modal done, apps block half done

--- a/src/homePage.html
+++ b/src/homePage.html
@@ -126,12 +126,12 @@
     <!-- Settings Button -->
     <i class="bi bi-gear" id="settingsBtn"></i>
     <!-- The Modal -->
-    <div id="myModal" class="modal">
+    <div id="settingsModal" class="modal">
       <!-- Modal content -->
       <div class="modal-content">
         <div class="modal-header">
-          <span class="close">&times;</span>
           <h4>Settings</h4>
+          <span class="close">&times;</span>
         </div>
         <div class="eachModalContent">
           <span>Select your font:&nbsp;&nbsp;&nbsp;</span>
@@ -154,9 +154,9 @@
             <option value="Fredoka">Fredoka</option>
           </select>
         </div>
-        <div class="modal-footer">
+        <!-- <div class="modal-footer">
           <h4>Modal Footer</h4>
-        </div>
+        </div> -->
       </div>
     </div>
 
@@ -164,6 +164,7 @@
     <!---------------------------------------------------------------------------------------------------------------->
     <!---------------------------------------------------------------------------------------------------------------->
     <!-- Scripts -->
+    <script src="./homePage.js"></script>
     <script src="../background.js"></script>
     <script src="./settingsModal/settingsModal.js"></script>
     <script src="./sidebar/sidebar.js"></script>
